--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,11 @@ plugins {
 
 	id 'java'
 }
+bootJar{
+	archiveBaseName='springboot'
+	archiveFileName='-.jar'
+	archiveVersion="0.0.0"
+}
 
 group = 'com.project'
 version = '0.0.1-SNAPSHOT'
