--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -15,7 +15,7 @@ spring:
 
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
