--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	//querydsl추가
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 
+
 	id 'java'
 }
 bootJar{
@@ -26,6 +27,8 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.4.0'
+
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -39,7 +42,7 @@ dependencies {
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
-	implementation 'com.querydsl:querydsl-jpa'
+//	implementation 'com.querydsl:querydsl-jpa'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 
