ADD Scheduled ImageUpload And ImageGet

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,7 +52,10 @@ spring:
     secret: govlepel@$&
 
 file:
-  path: C:\chawchaw\
+#  path: C:\chawchaw\
+  path: /home/ubuntu/chawchaw
+
+
 
 
   mvc:
