--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.3.7.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	//querydsl추가
-	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+//	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 
 
 	id 'java'
@@ -27,15 +27,25 @@ repositories {
 }
 
 dependencies {
-	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.4.0'
+//	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.4.0'
 
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+	//querydsl 추가
+	implementation ("com.querydsl:querydsl-jpa:4.4.0")
+	annotationProcessor (
+			"javax.annotation:javax.annotation-api:1.3.2",
+			"com.querydsl:querydsl-apt:4.4.0:jpa")
+	testImplementation ("com.querydsl:querydsl-jpa:4.4.0")
+	testAnnotationProcessor ("com.querydsl:querydsl-apt:4.4.0:jpa")
 
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+
+
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
@@ -45,23 +55,16 @@ dependencies {
 //	implementation 'com.querydsl:querydsl-jpa'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
-
-	//oAuth
-	//implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.4.5'
-	// OAuth2
-	//implementation group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.5.RELEASE'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	implementation 'com.google.code.gson:gson'
 	//mail
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'
 
-
-	implementation 'net.rakugakibox.util:yaml-resource-bundle:1.1'
-
 	//mysql
-	runtimeOnly 'mysql:mysql-connector-java'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
+
 	//swagger api
 	implementation 'io.springfox:springfox-swagger2:2.6.1'
 	implementation 'io.springfox:springfox-swagger-ui:2.6.1'
@@ -78,19 +81,19 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
-//querydsl 추가 시작
-def querydslDir = "$buildDir/generated/querydsl"
-querydsl {
-	jpa = true
-	querydslSourcesDir = querydslDir
-}
-sourceSets {
-	main.java.srcDir querydslDir
-}
-configurations {
-	querydsl.extendsFrom compileClasspath
-}
-compileQuerydsl {
-	options.annotationProcessorPath = configurations.querydsl
-}
+////querydsl 추가 시작
+//def querydslDir = "$buildDir/generated/querydsl"
+//querydsl {
+//	jpa = true
+//	querydslSourcesDir = querydslDir
+//}
+//sourceSets {
+//	main.java.srcDir querydslDir
+//}
+//configurations {
+//	querydsl.extendsFrom compileClasspath
+//}
+//compileQuerydsl {
+//	options.annotationProcessorPath = configurations.querydsl
+//}
 //querydsl 추가 끝
