--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,12 +8,13 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: 8834
-    url: jdbc:mysql://localhost:3308/chawchaw?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-    username: root
-#    password: rla8834ok
-#    url: jdbc:mysql://chawchawdb.cjek1elpmvy4.ap-northeast-2.rds.amazonaws.com:3306/board?serverTimezone=UTC&characterEncoding=UTF-8
-#    username: admin
+    
+#    password: 8834
+#    url: jdbc:mysql://localhost:3308/chawchaw?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+#    username: root
+    password: rla8834ok
+    url: jdbc:mysql://chawchawdb.cjek1elpmvy4.ap-northeast-2.rds.amazonaws.com:3306/board?serverTimezone=UTC&characterEncoding=UTF-8
+    username: admin
 
   jpa:
     database: mysql
