mod user UserService

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
     multipart:
       max-file-size: 5MB
       enabled: true
+  data:
+    redis:
+      repositories:
+        enabled: false
 
 
 
