--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -18,7 +18,7 @@ spring:
 
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true
