--- a/build.gradle
+++ b/build.gradle
@@ -81,8 +81,12 @@ dependencies {
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 
 	//swagger api
-	implementation 'io.springfox:springfox-swagger2:2.6.1'
-	implementation 'io.springfox:springfox-swagger-ui:2.6.1'
+//	implementation 'io.springfox:springfox-swagger2:2.6.1'
+//	implementation 'io.springfox:springfox-swagger-ui:2.6.1'
+
+	//h2
+	testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
+
 
 	//aws s3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE'
